--- a/test-suites/ProjectController/functional/create_project.yaml
+++ b/test-suites/ProjectController/functional/create_project.yaml
@@ -18,9 +18,9 @@ headers:
 testCases:
   - id: 1
     body: '{
-        "name": "proj-{{@Random | 6}}proj-{{@Random | 6}}proj-{{@Random | 6}}proj-{{@Random | 6}}proj-{{@Random | 6}}",
+        "name": "proj-{{@Random | 6}}",
         "url": "https://github.com/asriz7777/FX_Testing-Automation",
-        "account": "{{@create_githubacc_abstract_Response.data}}"
+        "account": "{{@create_githubacc_abstract_Response.data.id}}"
       }'
 
 
