--- a/test-suites/ProjectController/functional/project_getAutoSuggestions.yaml
+++ b/test-suites/ProjectController/functional/project_getAutoSuggestions.yaml
@@ -7,9 +7,9 @@ type: SUITE
 
 init:
  - create_githubacc_abstract
- - create_githubproj_abstract
+ - create_project_abstract
 
-endpoint: /projects/{{@create_githubproj_abstract_Response.data.id}}/auto-suggestions
+endpoint: /projects/{{@create_project_abstract_Response.data.id}}/auto-suggestions
 
 method: GET
 
