removed  data.id

--- a/test-suites/ProjectController/functional/create_project.yaml
+++ b/test-suites/ProjectController/functional/create_project.yaml
@@ -20,7 +20,7 @@ testCases:
     body: '{
         "name": "proj-{{@Random | 6}}",
         "url": "https://github.com/asriz7777/FX_Testing-Automation",
-        "account": "{{@create_githubacc_abstract_Response.data.id}}"
+        "account": "{{@create_githubacc_abstract_Response.data}}"
       }'
 
 
