--- a/test-suites/jobs/negative/job_create_invalid_data.yaml
+++ b/test-suites/jobs/negative/job_create_invalid_data.yaml
@@ -5,10 +5,6 @@ authors:
 
 type: SUITE
 
-init:
-  - create_githubacc_abstract
-  - create_project_abstract
-
 endpoint: /jobs
 
 method: POST
@@ -18,7 +14,7 @@ auth: Default
 testCases:
   - id: 1
     body: '{
-        "name": "UAT",
+        "name": "",
         "regions": "US_WEST_2",
         "categories": ""
 
@@ -29,14 +25,6 @@ assertions:
   - "@StatusCode == 200"
   - "@Response.errors == true"
   - "@Response.data.name == @Request.name"
-  - "@Response.data.environment.id == @Request.enviroment.id"
-  - "@Response.data.project.id == @Request.project.id"
-
-cleanup:
- - delete_environment
- - delete_project
- - delete_githubacc
-
 
 severity: Minor
 
