--- a/test-suites/AccountController/abstract/create_GitLabacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_GitLabacc_abstract.yaml
@@ -17,7 +17,7 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Init-{{@Random | 6}}",
+        "name": "GitLab-{{@Random | 6}}",
         "accountType": "GitLab",
         "accessKey": "test",
         "secretKey": "test"
