--- a/test-suites/AccountController/abstract/create_Localacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_Localacc_abstract.yaml
@@ -18,7 +18,7 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Init-{{@Random | 6}}",
+        "name": "Local-{{@Random | 6}}",
         "accountType": "Local"
       }'
 
