--- a/test-suites/AccountController/abstract/create_Microsoft_TFS_Gitacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_Microsoft_TFS_Gitacc_abstract.yaml
@@ -1,4 +1,4 @@
-name: create_Gitacc_abstract
+name: Microsoft_TFS_Gitacc_abstract
 
 authors:
   - Intesar Shannan Mohammed
@@ -17,8 +17,8 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Git-{{@Random | 6}}",
-        "accountType": "Git",
+        "name": "Init-{{@Random | 6}}",
+        "accountType": "Microsoft_TFS_Git",
         "accessKey": "test",
         "secretKey": "test"
       }'
