--- a/test-suites/AccountController/abstract/create_jiraacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_jiraacc_abstract.yaml
@@ -1,4 +1,4 @@
-name: create_Gitacc_abstract
+name: create_selfhostedacc_abstract
 
 authors:
   - Intesar Shannan Mohammed
@@ -17,10 +17,8 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Git-{{@Random | 6}}",
-        "accountType": "Git",
-        "accessKey": "test",
-        "secretKey": "test"
+        "name": "selfhosted-{{@Random | 6}}",
+        "accountType": "Self_Hosted"
       }'
 
 assertions:
@@ -28,8 +26,6 @@ assertions:
   - "@Response.errors == false"
   - "@Response.data.name == @Request.name"
   - "@Response.data.accountType == @Request.accountType"
-  - "@Response.data.accessKey == @Request.accessKey"
-  - "@Response.data.secretKey == EMPTY"
 
 
 severity: Major
