--- a/test-suites/AccountController/abstract/create_slackacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_slackacc_abstract.yaml
@@ -1,4 +1,4 @@
-name: create_Gitacc_abstract
+name: create_slackacc_abstract
 
 authors:
   - Intesar Shannan Mohammed
@@ -17,10 +17,9 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Git-{{@Random | 6}}",
-        "accountType": "Git",
-        "accessKey": "test",
-        "secretKey": "test"
+        "name": "Init-{{@Random | 6}}",
+        "accountType": "Slack",
+        "secretKey": "{{@Random | 20}}"
       }'
 
 assertions:
@@ -30,7 +29,6 @@ assertions:
   - "@Response.data.accountType == @Request.accountType"
   - "@Response.data.accessKey == @Request.accessKey"
   - "@Response.data.secretKey == EMPTY"
-
 
 severity: Major
 
