--- a/test-suites/AccountController/functional/create_GitLabacc.yaml
+++ b/test-suites/AccountController/functional/create_GitLabacc.yaml
@@ -1,10 +1,9 @@
-name: create_GitLabacc_abstract
+name: create_GitLabacc
 
 authors:
-  - Intesar Shannan Mohammed
-  - Asiya Shaji
+  - Asiya
 
-type: ABSTRACT
+type: SUITE
 
 endpoint: /accounts
 
@@ -17,8 +16,8 @@ testCases:
   - id: 1
     body:
       '{
-        "name": "Init-{{@Random | 6}}",
-        "accountType": "Microsoft_TFS_Git",
+        "name": "GitLab-{{@Random | 6}}",
+        "accountType": "GitLab",
         "accessKey": "test",
         "secretKey": "test"
       }'
