--- a/test-suites/EnvironmentController/functional/env_deleteby_id.yaml
+++ b/test-suites/EnvironmentController/functional/env_deleteby_id.yaml
@@ -10,7 +10,7 @@ init:
    - create_project_abstract
    - create_environment_abstract
    - job_findby_projectid_abstract
-   - delete_job
+   - delete_job__findby_projectid_abstract
    #- create_job_abstract
    #- delete_job
 
