--- a/test-suites/EnvironmentController/abstract/delete_environment.yaml
+++ b/test-suites/EnvironmentController/abstract/delete_environment.yaml
@@ -9,6 +9,8 @@ endpoint: /envs/{{@create_environment_abstract_Response.data.id}}
 
 method: DELETE
 
+auth: Default
+
 headers:
 - 'Content-Type: application/json'
 
