--- a/test-suites/ProjectController/abstract/delete_project.yaml
+++ b/test-suites/ProjectController/abstract/delete_project.yaml
@@ -9,6 +9,8 @@ endpoint: /projects/{{@create_project_abstract_Response.data.id}}
 
 method: DELETE
 
+auth: Default
+
 headers:
 - 'Content-Type: application/json'
 
