--- a/test-suites/jobs/abstract/delete_job.yaml
+++ b/test-suites/jobs/abstract/delete_job.yaml
@@ -9,6 +9,8 @@ endpoint: /jobs/{{@create_job_abstract_Response.data.id}}
 
 method: DELETE
 
+auth: Default
+
 headers:
 - 'Content-Type: application/json'
 
