--- a/test-suites/AccountController/abstract/create_Localacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_Localacc_abstract.yaml
@@ -31,7 +31,7 @@ assertions:
   - "@Response.data.accountType == @Request.accountType"
 
 cleanup:
-  - account_delete
+  - delete_account
 
 
 severity: Major
