--- a/test-suites/AccountController/abstract/create_self-hostedacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_self-hostedacc_abstract.yaml
@@ -30,7 +30,7 @@ assertions:
   - "@Response.data.accountType == @Request.accountType"
 
 cleanup:
-  - account_delete
+  - delete_account
 
 severity: Major
 
