--- a/test-suites/AccountController/functional/create_Microsoft_VSTS_Gitacc.yaml
+++ b/test-suites/AccountController/functional/create_Microsoft_VSTS_Gitacc.yaml
@@ -54,9 +54,10 @@ assertions:
   - "@Response.data.secretKey != @Request.secretKey"
 
 cleanup:
-  - account_delete
+  - delete_account
 
 severity: Major
+
 category: Functional
 
 tags:
