--- a/test-suites/AccountController/functional/create_slackacc.yaml
+++ b/test-suites/AccountController/functional/create_slackacc.yaml
@@ -54,8 +54,8 @@ assertions:
   - "@Response.data.secretKey != @Request.secretKey"
 
 cleanup:
-  - account_delete
-
+  - delete_account
+  
 severity: Major
 
 category: Functional
