--- a/test-suites/AccountController/abstract/create_BitBucketacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_BitBucketacc_abstract.yaml
@@ -33,10 +33,8 @@ assertions:
   - "@Response.data.accessKey == @Request.accessKey"
   - "@Response.data.secretKey == EMPTY"
 
-
 cleanup:
-  - account_delete
-
+  - delete_account
 
 severity: Major
 
