--- a/test-suites/AccountController/abstract/create_Microsoft_TFS_Gitacc_abstract.yaml
+++ b/test-suites/AccountController/abstract/create_Microsoft_TFS_Gitacc_abstract.yaml
@@ -34,8 +34,7 @@ assertions:
   - "@Response.data.secretKey == EMPTY"
 
 cleanup:
-    - account_delete
-
+    - delete_account
 
 severity: Major
 
