--- a/test-suites/AccountController/functional/create_githubacc.yaml
+++ b/test-suites/AccountController/functional/create_githubacc.yaml
@@ -52,9 +52,8 @@ assertions:
   - "@Response.data.accessKey == @Request.accessKey"
   - "@Response.data.secretKey == EMPTY"
 
-
 cleanup:
-  - account_delete
+  - delete_account
 
 severity: Major
 
