--- a/test-suites/AccountController/functional/create_Microsoft_VSTS_Gitacc.yaml
+++ b/test-suites/AccountController/functional/create_Microsoft_VSTS_Gitacc.yaml
@@ -18,28 +18,28 @@ headers:
 testCases:
   - id: 1
     body: '{
-        "name": "{{@Random | 3}}",
+        "name": "VSTS-{{@Random | 3}}",
         "accountType": "Microsoft_VSTS_Git",
         "accessKey": "testing accessKey",
         "secretKey": "testing secretKey"
      }'
   - id: 2
     body: '{
-        "name": "Test-{{@Random | 6}}",
+        "name": "VSTS-{{@Random | 6}}",
         "accountType": "Microsoft_VSTS_Git",
         "accessKey": "testing accessKey",
         "secretKey": "testing secretKey"
      }'
   - id: 3
     body: '{
-        "name": "Test-{{@Random | 12}}",
+        "name": "VSTS-{{@Random | 12}}",
         "accountType": "Microsoft_VSTS_Git",
         "accessKey": "testing accessKey",
         "secretKey": "testing secretKey"
      }'
   - id: 4
     body: '{
-        "name": "Test-{{@Random | 24}}",
+        "name": "VSTS-{{@Random | 24}}",
         "accountType": "Microsoft_VSTS_Git",
         "accessKey": "testing accessKey",
         "secretKey": "testing secretKey"
