--- a/test-suites/AccountController/functional/create_localacc.yaml
+++ b/test-suites/AccountController/functional/create_localacc.yaml
@@ -19,39 +19,29 @@ testCases:
   - id: 1
     body: '{
         "name": "{{@Random | 3}}",
-        "accountType": "Local",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
+        "accountType": "Local"
      }'
   - id: 2
     body: '{
         "name": "Test-{{@Random | 6}}",
-        "accountType": "Local",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
-     }'
+        "accountType": "Local"
+    }'
   - id: 3
     body: '{
         "name": "Test-{{@Random | 12}}",
-        "accountType": "Local",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
-     }'
+        "accountType": "Local"
+    }'
   - id: 4
     body: '{
         "name": "Test-{{@Random | 24}}",
-        "accountType": "Local",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
-     }'
+        "accountType": "Local"
+    }'
 
 assertions:
   - "@StatusCode == 200"
   - "@Response.errors == false"
   - "@Response.data.name == @Request.name"
   - "@Response.data.accountType == @Request.accountType"
-  - "@Response.data.accessKey == @Request.accessKey"
-  - "@Response.data.secretKey != @Request.secretKey"
 
 cleanup:
   - delete_account
