--- a/test-suites/AccountController/functional/create_self-hostedacc.yaml
+++ b/test-suites/AccountController/functional/create_self-hostedacc.yaml
@@ -19,30 +19,22 @@ testCases:
   - id: 1
     body: '{
         "name": "{{@Random | 3}}",
-        "accountType": "Selfhosted",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
+        "accountType": "Selfhosted"
      }'
   - id: 2
     body: '{
         "name": "Test-{{@Random | 6}}",
-        "accountType": "Selfhosted",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
+        "accountType": "Selfhosted"
      }'
   - id: 3
     body: '{
         "name": "Test-{{@Random | 12}}",
-        "accountType": "Selfhosted",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
+        "accountType": "Selfhosted"
      }'
   - id: 4
     body: '{
         "name": "Test-{{@Random | 24}}",
-        "accountType": "Selfhosted",
-        "accessKey": "testing accessKey",
-        "secretKey": "testing secretKey"
+        "accountType": "Selfhosted"
      }'
 
 assertions:
