--- a/test-suites/jobs/functional/job_findby_jobid.yaml
+++ b/test-suites/jobs/functional/job_findby_jobid.yaml
@@ -22,13 +22,11 @@ assertions:
   - "@Response.errors == false"
   - "@Response.data != EMPTY"
 
-cleanup:
-    - delete_job
-    - delete_environment
-    - delete_project
-    - delete_githubacc
-
-
+#cleanup:
+    #- delete_job
+    #- delete_environment
+    #- delete_project
+    #- delete_githubacc
 
 severity: Major
 
