--- a/test-suites/EnvironmentController/abstract/delete_environment.yaml
+++ b/test-suites/EnvironmentController/abstract/delete_environment.yaml
@@ -5,7 +5,7 @@ authors:
 
 type: ABSTRACT
 
-endpoint: /envs/{{@create_environment_abstract_Response.data.id}}
+endpoint: /envs/{{@Response.data.id}}
 
 method: DELETE
 
