--- a/test-suites/EnvironmentController/functional/environment_create.yaml
+++ b/test-suites/EnvironmentController/functional/environment_create.yaml
@@ -29,8 +29,7 @@ assertions:
   - "@Response.data.projecct.id == @Request.project.id"
 
 cleanup:
-  - delete_project
-  - delete_githubacc
+  - delete_environment
 
 severity: Major
 
