--- a/test-suites/jobs/abstract/delete_job.yaml
+++ b/test-suites/jobs/abstract/delete_job.yaml
@@ -5,7 +5,7 @@ authors:
 
 type: ABSTRACT
 
-endpoint: /jobs/{{@create_job_abstract_Response.data.id}}
+endpoint: /jobs/{{@Response.data.id}}
 
 method: DELETE
 
