--- a/test-suites/jobs/functional/job_findby_projectid.yaml
+++ b/test-suites/jobs/functional/job_findby_projectid.yaml
@@ -22,9 +22,9 @@ assertions:
   - "@Response.errors == false"
   - "@Response.data != EMPTY"
 
-cleanup:
-  - delete_project
-  - delete_githubacc
+#cleanup:
+  #- delete_project
+  #- delete_githubacc
 
 severity: Major
 
