--- a/test-suites/ProjectController/abstract/create_Microsoft_TFS_Git.yaml
+++ b/test-suites/ProjectController/abstract/create_Microsoft_TFS_Git.yaml
@@ -1,10 +1,10 @@
-name: create_project_Microsoft_TFS_Git
+name: create_project_Microsoft_TFS_Git_abstract
 
 authors:
   - Intesar Shannan Mohammed
   - Asiya Shaji
 
-type: SUITE
+type: ABSTRACT
 
 init:
   - Microsoft_TFS_Gitacc_abstract
@@ -22,27 +22,6 @@ testCases:
   - id: 1
     body: '{
         "name": "Microsoft-{{@Random | 3}}",
-        "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
-     }'
-  - id: 2
-    body: '{
-        "name": "Microsoft-{{@Random | 6}}",
-        "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
-     }'
-  - id: 3
-    body: '{
-        "name": "Microsoft-{{@Random | 12}}",
-        "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
-     }'
-  - id: 4
-    body: '{
-        "name": "Microsoft-{{@Random | 24}}",
         "url": "https://github.com/asriz7777/FX-Scripts-Functional",
         "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
 
