--- a/test-suites/ProjectController/abstract/create_Microsoft_VSTS_Git.yaml
+++ b/test-suites/ProjectController/abstract/create_Microsoft_VSTS_Git.yaml
@@ -1,9 +1,13 @@
-name: create_project_GitHub_abstract
+name: create_project_Microsoft_VSTS_Git_abstract
 
 authors:
-  - Asiya
+  - Intesar Shannan Mohammed
+  - Asiya Shaji
 
 type: ABSTRACT
+
+init:
+  - Microsoft_VSTS_Gitacc_abstract
 
 endpoint: /projects
 
@@ -15,13 +19,13 @@ headers:
 - 'Content-Type: application/json'
 
 testCases:
-    - id: 1
-      body: '{
-        "name": "proj-{{@Random | 6}}",
-        "url": "https://github.com/asriz7777/FX_Testing-Automation",
-        "account": "{{@create_githubacc_abstract_Response.data}}"
-      }'
+  - id: 1
+    body: '{
+        "name": "Microsoft-{{@Random | 3}}",
+        "url": "https://github.com/asriz7777/FX-Scripts-Functional",
+        "account": "{{@Microsoft_VSTS_Gitacc_abstract_Response.data}}"
 
+     }'
 
 assertions:
   - "@StatusCode == 200"
@@ -29,7 +33,6 @@ assertions:
   - "@Response.data.name == @Request.name"
   - "@Response.data.url == @Request.url"
   - "@Response.data.account.id == @Request.account.id"
-
 
 cleanup:
   - delete_project
