--- a/test-suites/ProjectController/functional/create_project_GitLab.yaml
+++ b/test-suites/ProjectController/functional/create_project_GitLab.yaml
@@ -1,4 +1,4 @@
-name: create_project_Microsoft_TFS_Git
+name: create_project_GitLab
 
 authors:
   - Intesar Shannan Mohammed
@@ -7,7 +7,7 @@ authors:
 type: SUITE
 
 init:
-  - Microsoft_TFS_Gitacc_abstract
+  - create_GitLabacc_abstract
 
 endpoint: /projects
 
@@ -21,31 +21,27 @@ headers:
 testCases:
   - id: 1
     body: '{
-        "name": "Microsoft-{{@Random | 3}}",
+        "name": "GitLab-{{@Random | 3}}",
         "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
+        "account": "{{@create_GitLabacc_abstract_Response.data}}"
      }'
   - id: 2
     body: '{
-        "name": "Microsoft-{{@Random | 6}}",
+        "name": "GitLab-{{@Random | 3}}",
         "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
+        "account": "{{@create_GitLabacc_abstract_Response.data}}"
      }'
   - id: 3
     body: '{
-        "name": "Microsoft-{{@Random | 12}}",
+        "name": "GitLab-{{@Random | 3}}",
         "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
+        "account": "{{@create_GitLabacc_abstract_Response.data}}"
      }'
   - id: 4
     body: '{
-        "name": "Microsoft-{{@Random | 24}}",
+        "name": "GitLab-{{@Random | 3}}",
         "url": "https://github.com/asriz7777/FX-Scripts-Functional",
-        "account": "{{@Microsoft_TFS_Gitacc_abstract_Response.data}}"
-
+        "account": "{{@create_GitLabacc_abstract_Response.data}}"
      }'
 
 assertions:
