--- a/test-suites/ProjectController/abstract/create_project_GitHub_abstract.yaml
+++ b/test-suites/ProjectController/abstract/create_project_GitHub_abstract.yaml
@@ -1,12 +1,9 @@
-name: create_project
+name: create_project_GitHub_abstract
 
 authors:
   - Asiya
 
-type: SUITE
-
-init:
- - create_githubacc_abstract
+type: ABSTRACT
 
 endpoint: /projects
 
@@ -18,11 +15,11 @@ headers:
 - 'Content-Type: application/json'
 
 testCases:
-  - id: 1
-    body: '{
+    - id: 1
+      body: '{
         "name": "proj-{{@Random | 6}}",
         "url": "https://github.com/asriz7777/FX_Testing-Automation",
-        "account": "{{@create_githubacc_abstract_Response.data}}"
+        "account": "{{@create_GitHubacc_abstract_Response.data}}"
       }'
 
 
@@ -32,6 +29,7 @@ assertions:
   - "@Response.data.name == @Request.name"
   - "@Response.data.url == @Request.url"
   - "@Response.data.account.id == @Request.account.id"
+
 
 cleanup:
   - delete_project
