--- a/test-suites/ProjectController/functional/create_project_GitHub.yaml
+++ b/test-suites/ProjectController/functional/create_project_GitHub.yaml
@@ -1,9 +1,12 @@
-name: create_project_GitHub_abstract
+name: create_project_GitHub
 
 authors:
   - Asiya
 
-type: ABSTRACT
+type: SUITE
+
+init:
+ - create_GitHubacc_abstract
 
 endpoint: /projects
 
@@ -15,11 +18,11 @@ headers:
 - 'Content-Type: application/json'
 
 testCases:
-    - id: 1
-      body: '{
+  - id: 1
+    body: '{
         "name": "proj-{{@Random | 6}}",
         "url": "https://github.com/asriz7777/FX_Testing-Automation",
-        "account": "{{@create_githubacc_abstract_Response.data}}"
+        "account": "{{@create_GitHubacc_abstract_Response.data}}"
       }'
 
 
@@ -29,7 +32,6 @@ assertions:
   - "@Response.data.name == @Request.name"
   - "@Response.data.url == @Request.url"
   - "@Response.data.account.id == @Request.account.id"
-
 
 cleanup:
   - delete_project
