--- a/test-suites/EnvironmentController/functional/env_findby_id.yaml
+++ b/test-suites/EnvironmentController/functional/env_findby_id.yaml
@@ -6,8 +6,8 @@ authors:
 type: SUITE
 
 init:
-   - create_githubacc_abstract
-   - create_project_abstract
+   - create_GitHubacc_abstract
+   - create_project_GitHub_abstract
    - create_environment_abstract
 
 endpoint: /envs/{{@create_environment_abstract_Response.data.id}}
@@ -22,8 +22,7 @@ assertions:
   - "@Response.data != EMPTY"
 
 cleanup:
-    - delete_project
-    - delete_githubacc
+    - delete_environment
 
 severity: Major
 
