--- a/test-suites/ProjectController/functional/project-checksums-all.yaml
+++ b/test-suites/ProjectController/functional/project-checksums-all.yaml
@@ -7,9 +7,9 @@ type: SUITE
 
 init:
    - create_githubacc_abstract
-   - create_project_abstract
+   - create_project_GitHub_abstract
 
-endpoint: /projects/{{@create_project_abstract_Response.data.id}}/project-checksums-all
+endpoint: /projects/{{@create_project_GitHub_abstract_Response.data.id}}/project-checksums-all
 
 method: GET
 
@@ -20,9 +20,9 @@ assertions:
   - "@Response.errors == false"
   - "@Response.data != EMPTY"
 
-cleanup:
-    - delete_project
-    - delete_githubacc
+#cleanup:
+  #  - delete_project
+  #  - delete_githubacc
 
 severity: Major
 
