--- a/test-suites/jobs/functional/job_findby_projectid.yaml
+++ b/test-suites/jobs/functional/job_findby_projectid.yaml
@@ -7,11 +7,11 @@ type: SUITE
 
 init:
    - create_githubacc_abstract
-   - create_project_abstract
+   - create_project_GitHub_abstract
    - create_environment_abstract
    #- create_job_abstract
 
-endpoint: /jobs/project-id/{{@create_project_abstract_Response.data.id}}
+endpoint: /jobs/project-id/{{@create_project_GitHub_abstract_Response.data.id}}
 
 method: GET
 
