--- a/test-suites/ProjectController/functional/project_addEnv.yaml
+++ b/test-suites/ProjectController/functional/project_addEnv.yaml
@@ -16,7 +16,7 @@ testCases:
     - id: 1
       body: '{"auths":[{"authType": "Basic","name": "Default",
       "password": "asiya@fxlabs.io","username": "ASIYA//asiya@fxlabs.io"}],
-      "name": "UAT","baseUrl": "http://13.56.210.25/api/v1",
+      "name": "UAT","baseUrl": "http://13.56.210.25/api/v1"
       }'
 
 assertions:
