--- a/test-suites/AccountController/functional/account_update.yaml
+++ b/test-suites/AccountController/functional/account_update.yaml
@@ -35,7 +35,7 @@ assertions:
     - "@Response.data.accountType == @Request.accountType"
     - "@Response.data.accessKey == @Request.accessKey"
     - "@Response.data.secretKey == EMPTY"
-    - "@Response.data.account.id == @Request.account.id"
+  #  - "@Response.data.account.id == @Request.account.id"
     #- "@Response.data.org.id == @Request.org.id"
 
 cleanup:
