invalid auth updated

--- a/test-suites/AccountController/Auth/account_update_invalid_auth.yaml
+++ b/test-suites/AccountController/Auth/account_update_invalid_auth.yaml
@@ -28,7 +28,7 @@ assertions:
 
 severity: Critical
 
-category: Security_UnSecured
+category: UnSecured
 # Auth required for this endpoint.
 
 tags:
