--- a/test-suites/AccountController/functional/create_GCPacc.yaml
+++ b/test-suites/AccountController/functional/create_GCPacc.yaml
@@ -19,52 +19,51 @@ testCases:
     body: '{
         "name": "{{@Random | 3}}",
         "accountType": "GCP",
-        "ClientId": "testing",
-        "ClientSecret": "testing",
-        "ProjectID": "testing",
+        "accessKey": "testing accessKey",
+        "secretKey": "testing secretKey",
+        "prop3": "projectid",
         "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
         "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
      }'
   - id: 2
     body: '{
         "name": "Test-{{@Random | 6}}",
-          "accountType": "GCP",
-          "ClientId": "testing",
-          "ClientSecret": "testing",
-          "ProjectID": "testing",
-          "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
-          "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
+        "accountType": "GCP",
+        "accessKey": "testing accessKey",
+        "secretKey": "testing secretKey",
+        "prop3": "projectid",
+        "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
+        "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
      }'
   - id: 3
     body: '{
         "name": "Test-{{@Random | 12}}",
-          "accountType": "GCP",
-          "ClientId": "testing",
-          "ClientSecret": "testing",
-          "ProjectID": "testing",
-          "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
-          "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
+        "accountType": "GCP",
+        "accessKey": "testing accessKey",
+        "secretKey": "testing secretKey",
+        "prop3": "projectid",
+        "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
+        "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
      }'
   - id: 4
     body: '{
         "name": "Test-{{@Random | 24}}",
-          "accountType": "GCP",
-          "ClientId": "testing",
-          "ClientSecret": "testing",
-          "ProjectID": "testing",
-          "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
-          "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
+        "accountType": "GCP",
+        "accessKey": "testing accessKey",
+        "secretKey": "testing secretKey",
+        "prop3": "projectid",
+        "allowedRegions": ["asia-east1-a","asia-east1-b","asia-east1-c","us-west1-a",
+        "us-west1-b","us-west1-c","us-west2-a","us-west2-b","us-west2-c"]
      }'
 
 assertions:
   - "@StatusCode == 200"
   - "@Response.errors == false"
   - "@Response.data.name == @Request.name"
-  - "@Response.data.accountType == @Request.accountType"
-  - "@Response.data.ClientId == @Request.CliendId"
-  - "@Response.data.Clientsecret == EMPTY"
-  - "@Response.data.ProjectID == @Request.ProjectID"
-
+  - "@Response.data.accessKey == @Request.accessKey"
+  - "@Response.data.secretKey != @Request.secretKey"
+  - "@Response.data.allowedRegions != NULL"
+  - "@Response.data.prop3 == @Request.prop3"
 
 cleanup:
   - delete_account
