--- a/test-suites/EnvironmentController/functional/create_environment.yaml
+++ b/test-suites/EnvironmentController/functional/create_environment.yaml
@@ -15,7 +15,7 @@ auth: Default
 testCases:
     - id: 1
       body: '{"auths":[{"authType": "Basic","name": "Default",
-      "password": "asiya@fxlabs.io","username": "ASIYA//asiya@fxlabs.io"}],
+      "password": "asiya@fxlabs.io","username": "Asiya//Asiya@fxlabs.io"}],
       "name": "UAT","baseUrl": "http://13.56.210.25/api/v1",
       "projectId": "{{@create_project_GitHub_abstract_Response.data.id}}"}'
 
