--- a/test-suites/jobs/abstract/create_job_abstract.yaml
+++ b/test-suites/jobs/abstract/create_job_abstract.yaml
@@ -15,8 +15,8 @@ testCases:
     - id: 1
       body: '{
         "name": "UAT",
-        "projectId": "{{@create_project_GitHub_abstract_Response.data.id}}",
-        "environmentId": "{{@create_environment_abstract_Response.data.id}}",
+        "project": "{{@create_project_GitHub_abstract_Response.data}}",
+        "environment": "{{@create_environment_abstract_Response.data}}",
         "regions": "US_WEST_2",
         "categories":""
  }'
