--- a/test-suites/jobs/functional/job_create.yaml
+++ b/test-suites/jobs/functional/job_create.yaml
@@ -19,9 +19,9 @@ auth: Default
 testCases:
   - id: 1
     body: '{
-        "name": "UAT",
-        "projectId": "{{@create_project_GitHub_abstract_Response.data.id}}",
-        "environmentId": "{{@create_environment_abstract_Response.data.id}}",
+        "name": "job1",
+        "project": "{{@create_project_GitHub_abstract_Response.data}}",
+        "environment": "{{@create_environment_abstract_Response.data}}",
         "regions": "US_WEST_2",
         "categories": ""
 
