updated gcp and azure

--- a/test-suites/AccountController/functional/create_AZUREacc.yaml
+++ b/test-suites/AccountController/functional/create_AZUREacc.yaml
@@ -37,6 +37,29 @@ testCases:
         "availableRegions": ["East US","East US 2","West US","West US 2",
         "Central US","North Central US","South Central US","West Central US"]
      }'
+   - id: 3
+      body: '{
+          "name": "{{@Random | 12}}",
+          "accountType": "AZURE",
+          "accessKey": "testing accessKey",
+          "secretKey": "testing secretKey",
+          "prop1": "subscriptionId",
+          "prop2": "TenantId",
+          "availableRegions": ["East US","East US 2","West US","West US 2",
+          "Central US","North Central US","South Central US","West Central US"]
+     }'
+   - id: 4
+      body: '{
+          "name": "Test-{{@Random | 24}}",
+          "accountType": "AZURE",
+          "accessKey": "testing accessKey",
+          "secretKey": "testing secretKey",
+          "prop1": "subscriptionId",
+          "prop2": "TenantId",
+          "availableRegions": ["East US","East US 2","West US","West US 2",
+          "Central US","North Central US","South Central US","West Central US"]
+       }'
+
 
 assertions:
   - "@StatusCode == 200"
@@ -45,10 +68,10 @@ assertions:
   - "@Response.data.accountType == @Request.accountType"
   - "@Response.data.accessKey == @Request.accessKey"
   - "@Response.data.secretKey != @Request.secretKey"
-  - "@Response.data.allowedRegions != NULL"
+  - "@Response.data.availableRegions != NULL"
   - "@Response.data.prop1 == @Request.prop1"
   - "@Response.data.prop2 == @Request.prop2"
-  
+
 cleanup:
   - delete_account
 
