--- a/test-suites/ProjectController/functional/project_deleteEnv.yaml
+++ b/test-suites/ProjectController/functional/project_deleteEnv.yaml
@@ -4,9 +4,16 @@ name: project_deleteEnv
 authors:
   - Asiya Shaji
 
-type: ABSTRACT
+type: SUITE
 
-endpoint: /jobs/{{@job_findby_projectid_abstract_Response.data[0].id}}
+init:
+  - create_GitHubacc_abstract
+  - create_project_GitHub_abstract
+  - create_environment_abstract
+  - job_findby_projectid_abstract
+  - delete_job__findby_projectid_abstract
+
+endpoint: /projects/{{@create_project_GitHub_abstract_Response.data.id}}/env/{{@create_environment_abstract_Response.data.id}}
 
 method: DELETE
 
