--- a/test-suites/ProjectController/functional/create_project_GitHub.yaml
+++ b/test-suites/ProjectController/functional/create_project_GitHub.yaml
@@ -20,7 +20,7 @@ headers:
 testCases:
   - id: 1
     body: '{
-        "name": "proj-{{@Random | 6}}",
+        "name": "GitHub-{{@Random | 6}}",
         "url": "https://github.com/asriz7777/FX_Testing-Automation",
         "account": "{{@create_GitHubacc_abstract_Response.data}}"
       }'
