--- a/test-suites/DashboardController/Negative/envs/Dashboard_env_params_large.yaml
+++ b/test-suites/DashboardController/Negative/envs/Dashboard_env_params_large.yaml
@@ -12,7 +12,7 @@ auth: Default
 
 assertions:
   - "@StatusCode == 200"
-  - "@Response.errors == false"
+  - "@Response.errors == true"
 
 severity: Major
 
