--- a/test-suites/DashboardController/Functional/dashboard_count_bugs.yaml
+++ b/test-suites/DashboardController/Functional/dashboard_count_bugs.yaml
@@ -3,7 +3,7 @@ name: dashboard_count_bugs
 authors:
   - Asiya Shaji
 
-endpoint: /dashboard/count-bugs
+endpoint: /dashboard/count-bugs?page=0&pageSize=100
 
 method: GET
 
