--- a/test-suites/DashboardController/Functional/dashboard_count_runsByDates.yaml
+++ b/test-suites/DashboardController/Functional/dashboard_count_runsByDates.yaml
@@ -3,7 +3,7 @@ name: dashboard_count_runsByDates
 authors:
   - Asiya Shaji
 
-endpoint: /dashboard/count-runs-between?oct?tonov
+endpoint: /dashboard/count-runs-between?fromDate=2018-11-01&toDate=2018-11-20
 
 method: GET
 
