--- a/test-suites/DashboardController/Functional/dashboard_count_auto_suggestions.yaml
+++ b/test-suites/DashboardController/Functional/dashboard_count_auto_suggestions.yaml
@@ -3,6 +3,8 @@ name: dashboard_count_auto_suggestions
 authors:
   - Asiya Shaji
 
+type: SUITE
+
 endpoint: /dashboard/count-auto-suggestions
 
 method: GET
