--- a/test-suites/DashboardController/Functional/dashboard_runs_findAll.yaml
+++ b/test-suites/DashboardController/Functional/dashboard_runs_findAll.yaml
@@ -4,6 +4,8 @@ authors:
   - Intesar Shannan Mohammed
   - Asiya Shaji
 
+type: SUITE
+
 endpoint: /dashboard/count-runs?page=0&pageSize=100
 
 method: GET
