--- a/test-suites/DashboardController/Negative/bytes/Dashboard_bytes_params_large.yaml
+++ b/test-suites/DashboardController/Negative/bytes/Dashboard_bytes_params_large.yaml
@@ -4,6 +4,8 @@ authors:
   - Intesar Shannan Mohammed
   - Asiya Shaji
 
+type: SUITE
+
 endpoint: /dashboard/count-bytes?page=0&pageSize=101
 
 method: GET
