--- a/test-suites/DashboardController/Negative/envs/Dashboard_env_params_negative_3.yaml
+++ b/test-suites/DashboardController/Negative/envs/Dashboard_env_params_negative_3.yaml
@@ -4,6 +4,8 @@ authors:
   - Intesar Shannan Mohammed
   - Asiya Shaji
 
+type: SUITE
+
 endpoint: /dashboard/count-envs?page=-1&pageSize=-10
 
 method: GET
