--- a/test-suites/DashboardController/Negative/jobs/Dashboard_job_params_negative_1.yaml
+++ b/test-suites/DashboardController/Negative/jobs/Dashboard_job_params_negative_1.yaml
@@ -4,6 +4,8 @@ authors:
   - Intesar Shannan Mohammed
   - Asiya Shaji
 
+type: SUITE
+
 endpoint: /dashboard/count-jobs?page=-1&pageSize=10
 
 method: GET
